fix heading-container alignment; change some fonts

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,4 @@
   margin: 0;
   padding: 0;
   background-color: #384452;
-  font-family: "Lato", system-ui;/*, "ALK Rounded Nusx Med", "BPG Phone Sans Bold";*/
-  /*background-color: #48c201;*/
 }
